# path_finder

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  SOURCES_AND_RECONSTRUCTION.md  app.py  app.test.py  app_path_finder.py  app_test.py  app_test2.py  config.yml  function_ines.py  function_path_finder.py  function_with_reseach_of_AIzyn.py  mypy.ini  path_finder-env.yml  pyproject.toml  reaction-dataset.json  reaction_dataset.json  test_example.py  tox.ini
.github/workflows/: publish.yml
Tests/: conftest.py  test_app.py  test_app_utensils.py  test_launch.py  test_localization.py  test_molecule_rendering.py  test_report_builder.py  test_route_engine.py
data/: config.yml  reaction_dataset.json  toxicity_dataset.json
docs/docs_out/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/docs_out/.doctrees/: environment.pickle  index.doctree
docs/docs_out/_modules/: index.html
docs/docs_out/_static/: copybutton.js
docs/docs_out/api/: modules.html  path_finder.html
docs/source/: conf.py
docs/source/api/: modules.rst  path_finder.rst
notebooks/: report.ipynb
scripts/: convert_orderly_to_generic.py
src/path_finder/: __init__.py  _about_.py  app.py  app_layout.py  app_path_finder.py  app_utensils.py  cli.py  launch.py  localization.py  molecule_rendering.py  report_builder.py  route_engine.py
tests/: conftest.py  test_app.py  test_app_layout.py  test_app_utensils.py  test_functions.py  test_launch.py  test_localization.py  test_molecule_rendering.py  test_report_builder.py  test_route_engine.py
(+13 files in other folders)
