[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "path-finder-retrosynthesis"
version = "1.0.8"
description = "Retrosynthesis route finder — AiZynthFinder + Rxn-INSIGHT + Chemistry by Design"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

authors = [
  { name = "Yara Chahda" },
  { name = "Corentin Portmann" },
  { name = "Ines Ouchen" },
]

keywords = [
  "chemistry", "retrosynthesis", "aizynthfinder",
  "streamlit", "cheminformatics", "rxn-insight",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
  "streamlit>=1.35.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "pandas>=2.0",
  "Pillow>=10.0",
  "requests>=2.31",
  "aizynthfinder>=4.2.0",
  "click>=8.1",
]

[project.optional-dependencies]
predicted = [
  "rxn-insight>=1.0.0",
]

[project.scripts]
path-finder       = "path_finder.launch:main"
path-finder-setup = "path_finder.launch:setup"

[project.urls]
Homepage   = "https://github.com/YaraChahda/path_finder"
Repository = "https://github.com/YaraChahda/path_finder"
Issues     = "https://github.com/YaraChahda/path_finder/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
path_finder = [
  "data/reaction_dataset.json",
  "data/toxicity_dataset.json",
  "data/generic_reactions.json",
  "data/config_template.yml",
  "assets/banner.png",
  "assets/*.png",
]
